# email-guard

./: .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yml  email_guard.py  pyproject.toml  reflection.md  requirements.txt  setup.py
ai/: __init__.py  email_guard.py  email_guard_model.py  requirements.txt  utils.py
backend/: Dockerfile  app.py  requirements.txt
data/: spam.csv
docs/: README.md  security_notes.md
email_guard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
email_guard_sdk/: classifier.py
frontend/web/: Dockerfile  package.json
frontend/web/nginx/: default.conf
frontend/web/public/: index.html
frontend/web/src/: App.css  App.js
tests/: test_email_guard.py
