[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "email_guard"
version = "1.0.0"
requires-python = ">=3.8"
dependencies = [
    "flask==2.3.2",
    "flask-limiter==2.8.1",
    "transformers==4.30.0",
    "torch==2.3.1; platform_system != 'Windows'",
    "gunicorn==20.1.0"
]